welcome.lessons.welcome.array.array123.Array123.scala.error
array123:4: error: value && is not a member of Int
    if (nums(j)=1 && nums(j+1)=2 && nums(j+2)==3 ) {
                  ^array123:4: error: value && is not a member of Int
    if (nums(j)=1 && nums(j+1)=2 && nums(j+2)==3 ) {
                                 ^